test/fail/issue167.mo
type F<A> = A<Int>;
